--- a/template.html
+++ b/template.html
@@ -114,33 +114,35 @@
           </div>
         </div>
         {% for sort in wines %}
-        <div class="col-12 section-title text-center mb-5">
-            <h2 class="d-block">{{ sort }}</h2>
-        </div>
-
-        <div class="row">{% for bottle in wines[sort] %}
-            <div class="col-lg-4 mb-5 col-md-6">
-              <div class="wine_v_1 text-center pb-4 pt-5">
-              {% if bottle.Картинка %}
-                <img src="images/{{bottle.Картинка}}" alt="Image" class="img-fluid">
-              {% else %}
-                <img src="https://dvmn.org/filer/canonical/1569944855/354/" alt="Image" class="img-fluid">
-              {% endif %}
-              {% if bottle['Акция'] %}
-                <img src="assets/profitable.png" style="width:10rem;height: 10rem;position:absolute;right: -20px;top: -20px;">
-              {% endif %}
-                <div>
-                  <h3 class="heading mt-3 mb-3 text-dark">{{bottle['Название']}}</h3>
-                  <p>
-                    {% if sort != 'Напитки'  %}
-                    Сорт винограда - {{bottle.Сорт}}<br/>
-                    {% endif %}
-                    <span class="price">{{bottle.Цена}}</span>
-                  </p>
+          <div class="col-12 section-title text-center mb-5">
+              <h2 class="d-block">{{ sort }}</h2>
+          </div>
+          <div class="row">
+            {% for bottle in wines[sort] %}
+              <div class="col-lg-4 mb-5 col-md-6">
+                <div class="wine_v_1 text-center pb-4 pt-5">
+                  {% if bottle.Картинка %}
+                    <img src="images/{{bottle.Картинка}}" alt="Image" class="img-fluid">
+                  {% else %}
+                    <img src="https://dvmn.org/filer/canonical/1569944855/354/" alt="Image" class="img-fluid">
+                  {% endif %}
+                  {% if bottle['Акция'] %}
+                    <img src="assets/profitable.png" style="width:10rem;height: 10rem;position:absolute;right: -20px;top: -20px;">
+                  {% endif %}
+                  <div>
+                    <h3 class="heading mt-3 mb-3 text-dark">{{bottle['Название']}}</h3>
+                    <p>
+                      {% if sort != 'Напитки'  %}
+                        Сорт винограда - {{bottle.Сорт}}<br/>
+                      {% endif %}
+                      <span class="price">{{bottle.Цена}}</span>
+                    </p>
+                  </div>
                 </div>
               </div>
-            </div>{% endfor %}{% endfor %}
-        </div>
+            {% endfor %}
+          </div>
+        {% endfor %}
       </div>
     </div>
 
