--- a/template.html
+++ b/template.html
@@ -113,12 +113,12 @@
             </p>
           </div>
         </div>
-        {% for sort in wines %}
+        {% for sort, bottles in wines.items() %}
           <div class="col-12 section-title text-center mb-5">
               <h2 class="d-block">{{ sort }}</h2>
           </div>
           <div class="row">
-            {% for bottle in wines[sort] %}
+            {% for bottle in bottles %}
               <div class="col-lg-4 mb-5 col-md-6">
                 <div class="wine_v_1 text-center pb-4 pt-5">
                   {% if bottle.Картинка %}
