add сортировка продукции на сайте

--- a/template.html
+++ b/template.html
@@ -113,7 +113,7 @@
             </p>
           </div>
         </div>
-        {% for sort, bottles in wines.items() %}
+        {% for sort, bottles in wines %}
           <div class="col-12 section-title text-center mb-5">
               <h2 class="d-block">{{sort}}</h2>
           </div>
